--- a/14.Event_counter/event_counter.html
+++ b/14.Event_counter/event_counter.html
@@ -44,9 +44,12 @@
     </main>
 
     <script>
+
+        let birthdate = new Date(2022,00,01);
+        
+        
         setInterval(counter,1000)
         function counter() {
-            let birthdate = new Date(2021,12,21);
             let timenow = new Date();
             let diff = birthdate - timenow;
             let time = Math.floor(diff/1000);
@@ -56,6 +59,7 @@
             time = time%3600;
             let min = Math.floor(time/60);
             time = time%60;
+            // alert(time,day,hour,min);
             document.querySelector("p").innerHTML = `${day}d ${hour}h ${min}m ${time}s`;
         }
     </script>
